Minor fix - Added profile information in student.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                           <ul class="navbar-nav mr-auto">
                             <li class="nav-item active">
-                              <a class="nav-link" href="lab5.html">Home <span class="sr-only">(current)</span></a>
+                              <a class="nav-link" href="student.html">Home <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item" v-if="!logged">
                               <a class="nav-link" href="index.html">Login</a>
