Added service provider registration

--- a/registration.html
+++ b/registration.html
@@ -20,8 +20,11 @@
                             <li class="nav-item">
                               <a class="nav-link" href="index.html">Login</a>
                             </li>
-                            <li class="nav-item">
-                              <a class="nav-link" href="registration.html">Registration</a>
+                            <li class="nav-item"  v-if="!logged">
+                              <a class="nav-link" href="registration.html">Student Registration</a>
+                            </li>
+                            <li class="nav-item"  v-if="!logged">
+                              <a class="nav-link" href="providerregistration.html">Provider Registration</a>
                             </li>
                           </ul>
                           <form class="form-inline my-2 my-lg-0">
