--- a/serviceprovider.html
+++ b/serviceprovider.html
@@ -22,7 +22,10 @@
                               <a class="nav-link" href="login.html">Login</a>
                             </li>
                             <li class="nav-item"  v-if="!logged">
-                              <a class="nav-link" href="registration.html">Registration</a>
+                              <a class="nav-link" href="registration.html">Student Registration</a>
+                            </li>
+                            <li class="nav-item"  v-if="!logged">
+                              <a class="nav-link" href="providerregistration.html">Provider Registration</a>
                             </li>
 
                             <li class="nav-item">
